Let the bot move items to in-progress on trello

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "botbuilder": "~>3.4.4",
     "eslint": "^3.9.1",
     "googleapis": "^14.1.0",
+    "redis": "^2.6.3",
     "request": "^2.76.0",
-    "restify": "^4.1.1"
+    "restify": "^4.1.1",
+    "url-assembler": "^1.2.4"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
