--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/eslint/bin/eslint.js ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.4.6",
     "botbuilder": "~>3.4.4",
-    "eslint": "^3.9.1",
     "express": "^4.14.0",
+    "express-hbs": "^1.0.3",
     "googleapis": "^14.1.0",
     "redis": "^2.6.3",
     "request": "^2.76.0",
