--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
     "botbuilder": "~>3.4.4",
     "express": "^4.14.0",
     "express-hbs": "^1.0.3",
