--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "googleapis": "^14.1.0",
     "redis": "^2.6.3",
     "request": "^2.76.0",
-    "url-assembler": "^1.2.4"
+    "url-assembler": "^1.2.4",
+    "warp10": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
