--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
-    "botbuilder": "^3.5.1", /* 3.4.4 */
+    "botbuilder": "^3.5.1",
     "express": "^4.14.0",
     "express-hbs": "^1.0.3",
     "googleapis": "^14.1.0",
